syntax = "proto3";

package crdt;

option java_multiple_files = false;
option java_package = "io.activej.crdt";
option java_outer_classname = "CrdtMessagingProto";

message CrdtMessage {
  enum CrdtMessages {
    UPLOAD = 0;
    REMOVE = 1;
    PING = 2;
    TAKE = 3;
    TAKE_FINISHED = 4;
  }

  message Download {
    int64 token = 1;
  }

  oneof message {
    CrdtMessages messages = 1;
    Download download = 2;
  }
}

message CrdtResponse {
  enum CrdtResponses{
    UPLOAD_FINISHED = 0;
    REMOVE_FINISHED = 1;
    PONG = 2;
    DOWNLOAD_STARTED = 3;
    TAKE_STARTED = 4;
  }

  message ServerError{
    string message = 1;
  }

  oneof response {
    CrdtResponses responses = 1;
    ServerError error = 2;
  }
}